force-app/main/default/objects/Attribute__c.object
<CustomObject>
    <description>Master List of Attributes Or Benefits For the Healthplan</description>
    <fields>
        <fullName>Attribute_Category__c</fullName>
        <label>Attribute Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Information</fullName>
                </value>
                <value>
                    <fullName>Rating Method</fullName>
                </value>
                <value>
                    <fullName>Dependent Coverage</fullName>
                </value>
                <value>
                    <fullName>Preventive Services</fullName>
                </value>
                <value>
                    <fullName>Physician and Other Services</fullName>
                </value>
                <value>
                    <fullName>Emergency &amp; Urgent Care Services</fullName>
                </value>
                <value>
                    <fullName>Hospital and Other Facility Services</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Testing Services</fullName>
                </value>
                <value>
                    <fullName>Maternity Services</fullName>
                </value>
                <value>
                    <fullName>Mental Health &amp; Substance Abuse</fullName>
                </value>
                <value>
                    <fullName>Diabetic Supplies and Services</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation Services</fullName>
                </value>
                <value>
                    <fullName>Additional Services</fullName>
                </value>
                <value>
                    <fullName>Prescription Drug Coverage</fullName>
                </value>
                <value>
                    <fullName>Pediatric Vision Services</fullName>
                </value>
                <value>
                    <fullName>Adult Vision Services</fullName>
                </value>
                <value>
                    <fullName>Dental Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attribute_Display_Name__c</fullName>
        <label>Attribute Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Long_Code__c</fullName>
        <label>Attribute Long Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <label>Attribute Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Key_Display_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls if the Benefit is to be displayed as summary information for marketing plans</description>
        <inlineHelpText>Controls if the Benefit is to be displayed as summary information for marketing plans</inlineHelpText>
        <label>Is Key Display Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Category__c</columns>
        <columns>Attribute_Long_Code__c</columns>
        <columns>Attribute_Name__c</columns>
        <columns>Attribute_Display_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>Emergency_and_Urgent_Care_Services</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Long_Code__c</columns>
        <columns>Attribute_Name__c</columns>
        <columns>Attribute_Display_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Category__c</field>
            <operation>equals</operation>
            <value>Emergency &amp; Urgent Care Services</value>
        </filters>
        <label>Emergency and Urgent Care Services</label>
    </listViews>
    <listViews>
        <fullName>General_Information_Benefits</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Long_Code__c</columns>
        <columns>Attribute_Name__c</columns>
        <columns>Attribute_Display_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Category__c</field>
            <operation>equals</operation>
            <value>General Information</value>
        </filters>
        <label>General Information Benefits</label>
    </listViews>
    <listViews>
        <fullName>Hospital_and_Facilities</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Long_Code__c</columns>
        <columns>Attribute_Name__c</columns>
        <columns>Attribute_Display_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Category__c</field>
            <operation>equals</operation>
            <value>Hospital and Other Facility Services,Diagnostic Testing Services,Maternity Services,Mental Health &amp; Substance Abuse</value>
        </filters>
        <label>Facilities Services</label>
    </listViews>
    <listViews>
        <fullName>Physicial_and_Other_Services</fullName>
        <columns>NAME</columns>
        <columns>Attribute_Long_Code__c</columns>
        <columns>Attribute_Name__c</columns>
        <columns>Attribute_Display_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Attribute_Category__c</field>
            <operation>equals</operation>
            <value>Physician and Other Services</value>
        </filters>
        <label>Physicial and Other Services</label>
    </listViews>
    <nameField>
        <label>Attribute Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>