force-app/main/default/objects/Attribute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attribute_Category__c</columns>
    <columns>Attribute_Long_Code__c</columns>
    <columns>Attribute_Name__c</columns>
    <columns>Attribute_Display_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>