force-app/main/default/objects/Attribute__c/listViews/Emergency_and_Urgent_Care_Services.listView-meta.xml
<ListView>
    <fullName>Emergency_and_Urgent_Care_Services</fullName>
    <columns>NAME</columns>
    <columns>Attribute_Long_Code__c</columns>
    <columns>Attribute_Name__c</columns>
    <columns>Attribute_Display_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attribute_Category__c</field>
        <operation>equals</operation>
        <value>Emergency &amp; Urgent Care Services</value>
    </filters>
    <label>Emergency and Urgent Care Services</label>
</ListView>