force-app/main/default/objects/Attribute__c/listViews/General_Information_Benefits.listView-meta.xml
<ListView>
    <fullName>General_Information_Benefits</fullName>
    <columns>NAME</columns>
    <columns>Attribute_Long_Code__c</columns>
    <columns>Attribute_Name__c</columns>
    <columns>Attribute_Display_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Attribute_Category__c</field>
        <operation>equals</operation>
        <value>General Information</value>
    </filters>
    <label>General Information Benefits</label>
</ListView>